Correctly consider global default visibility of videos (#1302)
* Correctly consider global default visibility of videos

* use correct sql

--- a/assets/css/opencast.scss
+++ b/assets/css/opencast.scss
@@ -362,6 +362,14 @@ $action-menu-icon-size: 20px;
     opacity: 0.7;
 }
 
+.oc--episode--invisible {
+    background-color: #FFFFCC;
+}
+
+.oc--title--invisible-info {
+    font-size: 0.8em;
+}
+
 .oc--loadingbar {
     border-radius: 15px;
     background-color: darken($episode-background, 20%);
